// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_tree should hide disabbled integration options 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "guest_edit_post": Object {
            "editTimeLimitButton": <Memo(Connect(EditPostTimeLimitButton))
              isDisabled={false}
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "combined": true,
            "id": "guest_create_private_channel",
            "permissions": Array [
              "create_private_channel",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_edit_post",
            "permissions": Array [
              "edit_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_delete_post",
            "permissions": Array [
              "delete_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_channel_mentions",
            "permissions": Array [
              "use_channel_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_group_mentions",
            "permissions": Array [
              "use_group_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_create_post",
            "permissions": Array [
              "create_post",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on default data 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "guest_edit_post": Object {
            "editTimeLimitButton": <Memo(Connect(EditPostTimeLimitButton))
              isDisabled={false}
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "combined": true,
            "id": "guest_create_private_channel",
            "permissions": Array [
              "create_private_channel",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_edit_post",
            "permissions": Array [
              "edit_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_delete_post",
            "permissions": Array [
              "delete_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_channel_mentions",
            "permissions": Array [
              "use_channel_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_group_mentions",
            "permissions": Array [
              "use_group_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_create_post",
            "permissions": Array [
              "create_post",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on license without LDAPGroups 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "guest_edit_post": Object {
            "editTimeLimitButton": <Memo(Connect(EditPostTimeLimitButton))
              isDisabled={false}
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "combined": true,
            "id": "guest_create_private_channel",
            "permissions": Array [
              "create_private_channel",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_edit_post",
            "permissions": Array [
              "edit_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_delete_post",
            "permissions": Array [
              "delete_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_channel_mentions",
            "permissions": Array [
              "use_channel_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_create_post",
            "permissions": Array [
              "create_post",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on read only 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "guest_edit_post": Object {
            "editTimeLimitButton": <Memo(Connect(EditPostTimeLimitButton))
              isDisabled={true}
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "combined": true,
            "id": "guest_create_private_channel",
            "permissions": Array [
              "create_private_channel",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_edit_post",
            "permissions": Array [
              "edit_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_delete_post",
            "permissions": Array [
              "delete_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_channel_mentions",
            "permissions": Array [
              "use_channel_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_group_mentions",
            "permissions": Array [
              "use_group_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_create_post",
            "permissions": Array [
              "create_post",
            ],
          },
        ]
      }
      readOnly={true}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="channel_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on system scope 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "guest_edit_post": Object {
            "editTimeLimitButton": <Memo(Connect(EditPostTimeLimitButton))
              isDisabled={false}
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "combined": true,
            "id": "guest_create_private_channel",
            "permissions": Array [
              "create_private_channel",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_edit_post",
            "permissions": Array [
              "edit_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_delete_post",
            "permissions": Array [
              "delete_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_channel_mentions",
            "permissions": Array [
              "use_channel_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_group_mentions",
            "permissions": Array [
              "use_group_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_create_post",
            "permissions": Array [
              "create_post",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="system_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot on team scope 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "guest_edit_post": Object {
            "editTimeLimitButton": <Memo(Connect(EditPostTimeLimitButton))
              isDisabled={false}
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={null}
      permissions={
        Array [
          Object {
            "combined": true,
            "id": "guest_create_private_channel",
            "permissions": Array [
              "create_private_channel",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_edit_post",
            "permissions": Array [
              "edit_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_delete_post",
            "permissions": Array [
              "delete_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_channel_mentions",
            "permissions": Array [
              "use_channel_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_group_mentions",
            "permissions": Array [
              "use_group_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_create_post",
            "permissions": Array [
              "create_post",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="team_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_tree should match snapshot with parentRole with permissions 1`] = `
<div
  className="permissions-tree guest"
>
  <div
    className="permissions-tree--header"
  >
    <div
      className="permission-name"
    >
      <FormattedMessage
        defaultMessage="Permission"
        id="admin.permissions.permissionsTree.permission"
      />
    </div>
    <div
      className="permission-description"
    >
      <FormattedMessage
        defaultMessage="Description"
        id="admin.permissions.permissionsTree.description"
      />
    </div>
  </div>
  <div
    className="permissions-tree--body"
  >
    <PermissionGroup
      additionalValues={
        Object {
          "guest_edit_post": Object {
            "editTimeLimitButton": <Memo(Connect(EditPostTimeLimitButton))
              isDisabled={false}
              onClick={[Function]}
            />,
          },
        }
      }
      combined={false}
      id="all"
      key="all"
      onChange={[Function]}
      parentRole={
        Object {
          "permissions": "invite_user",
        }
      }
      permissions={
        Array [
          Object {
            "combined": true,
            "id": "guest_create_private_channel",
            "permissions": Array [
              "create_private_channel",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_edit_post",
            "permissions": Array [
              "edit_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_delete_post",
            "permissions": Array [
              "delete_post",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_reactions",
            "permissions": Array [
              "add_reaction",
              "remove_reaction",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_channel_mentions",
            "permissions": Array [
              "use_channel_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_use_group_mentions",
            "permissions": Array [
              "use_group_mentions",
            ],
          },
          Object {
            "combined": true,
            "id": "guest_create_post",
            "permissions": Array [
              "create_post",
            ],
          },
        ]
      }
      readOnly={false}
      role={
        Object {
          "name": "test",
          "permissions": Array [],
        }
      }
      root={true}
      scope="system_scope"
      selectRow={[MockFunction]}
      uniqId="test"
    />
  </div>
  <Connect(EditPostTimeLimitModal)
    onClose={[Function]}
    show={false}
  />
</div>
`;
